<resources>
    <string name="app_name">Qobuz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="logo_description">Nothing here</string>

    <!-- Login activity -->
    <string name="username_or_email">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="register">Tạo tài khoản mới</string>

    <!-- Register activity -->
    <string name="already_have_account">Đã có tài khoản?</string>
    <string name="signup">Tạo tài khoản</string>

    <string name="Pre">Premium</string>
    <string name="SP">Spotify Premium</string>
    <string name="Reward">Nhận 2 tháng dùng gói Premium với giá 59,000đ</string>
    <string name="USEPRE">DÙNG PREMIUM</string>
    <string name="AfterPre">Sau đó chỉ 59,000đ/tháng. Có áp dụng các điều khoản và điều kiện. Ưu đãi không dành cho người đã dùng thử gói Premium</string>
    <string name="LyDo">Lý do nên dùng gói Premium</string>
    <string name="Num1">Nghe ngoại tuyến mà không cần Wi-Fi hay dữ liệu di động</string>
    <string name="Num2">Phát nhạc theo thứ tự bất kỳ</string>
    <string name="Num3">Nghe nhạc không bị quảng cáo làm gián đoạn</string>
    <string name="Num4">Chất lượng âm thanh vượt trôi</string>
    <string name="Pick">Chọn gói Premium của bạn</string>
    <string name="Mini">Mini Premium</string>
    <string name="DaCap">Từ 2,300đ</string>
    <string name="Free">Spotify Free</string>
    <string name="Present">GÓI HIỆN TẠI</string>
    <string name="OneDay">TRONG 1 NGÀY</string>
    <string name="Text1Goi1">Gói 1 ngày và gói một tuần • Nhạc không quảng cáo trên thiết bị di động • Tải 30 bài hát trên 1 thiết bị di động • Gói chỉ dành cho thiết bị di động</string>
    <string name="XemGoi1">XEM GÓI</string>
    <string name="Text2Goi1"><u>Áp dụng điều khoản và điều kiện.</u></string>
    <string name="PreInd">Premium Individual</string>
    <string name="GiaPreInd">59,000đ</string>
    <string name="TwoMonth">TRONG 2 THÁNG</string>
    <string name="Text1Goi2">1 tài khoản Premium</string>
    <string name="UsePresent">DÙNG GÓI PREMIUM</string>
    <string name="Text2Goi2">Sau đó chỉ 59,000đ/tháng. Có áp dụng các điều khoản và điều kiện. Ưu đãi không dành cho người đã dùng thử gói Premium</string>
    <string name="PreStu">Premium Student</string>
    <string name="GiaPreStu">29,500đ</string>
    <string name="Text2Goi3">Sau đó áp dụng các điều khoản và điều kiện. Gói chỉ dành cho sinh viên tại các trường cao đẳng và đại học chưa dùng thử gói Premium. Sau thời gian dùng thử, mức phí sẽ là 29,500đ/tháng.</string>
    <string name="back">Back</string>
    <string name="usepre">Dùng Premium</string>
    <string name="YourPick">Bạn đã chọn</string>
    <string name="Change"><u>Thay đổi gói</u></string>
    <string name="pre_mini">Premium Mini</string>
    <string name="ghi_chu_goi_mini">1 tài khoản chỉ trên thiết bị di động</string>
    <string name="ghi_chu_goi_mini_1">Trải nghiệm miễn phí trên thiết bị di động</string>
    <string name="tra_truoc">Trả trước một lần, không tự động gia hạn.</string>
    <string name="one_week">1 tuần</string>
    <string name="gia_1_tuan">8,800đ</string>
    <string name="one_day">1 ngày</string>
    <string name="gia_1_ngay">2,300đ</string>
    <string name="oneacc">1 tài khoản</string>
    <string name="note_preind">Áp dụng <b><u>điều khoản và điều kiện</u></b>. Chỉ dành cho người chưa dùng thử gói Premium.</string>
    <string name="pre_register">Đăng ký</string>
    <string name="note2">Tự động gia hạn hàng tháng, hủy bất cứ lúc nào.</string>
    <string name="twomonth">2 tháng với giá 59,000đ</string>
    <string name="note3">59,000đ/tháng sau thời gian ưu đãi</string>
    <string name="regisnote">Đăng ký bằng thẻ tín dụng hoặc ví</string>
    <string name="sellone">Thanh toán một lần</string>
    <string name="note4">Nạp tiền khi bạn muốn, không tự động gia hạn</string>
    <string name="oneyear">12 tháng</string>
    <string name="goi1nam">Thanh toán một lần với giá 590,000đ</string>
    <string name="threemon">3 tháng</string>
    <string name="goi3thang">Thanh toán một lần với giá 195,000đ</string>
    <string name="onemon">1 tháng</string>
    <string name="goi1thang">Thanh toán một lần với giá 65,000đ</string>
    <string name="goi6thang">Thanh toán một lần với giá 354,000đ</string>
    <string name="sixmon">6 tháng</string>
    <string name="VettifySinhvien">Xác minh bạn là sinh viên</string>
    <string name="note5">Trước tiên, chúng tôi cần xác minh rằng bạn đang theo học tại một trường đại học hoặc cao đẳng được công nhận.</string>
    <string name="npte6">Bạn không chắc mình có đủ điều kiện hay không? <b><u>Tìm hiểu thêm</u></b>.</string>
    <string name="Next">Tiếp</string>
    <string name="pay">Thanh toán</string>
    <string name="momo">Momo</string>
    <string name="bank">Ngân hàng</string>
    <string name="ggplay">Google Play</string>
    <string name="payment">Thanh toán</string>
    <string name="choose">Chọn phương thức thanh toán</string>
    <string name="huy">Hủy</string>
    <string name="pre_indi_b">PREMIUM INDIVIDUAL</string>
    <string name="pre_mini_b">PREMIUM MINI</string>
    <string name="pick">Chọn</string>
    <string name="pre_stu_b">PREMIUM STUDENT</string>
    <string name="pickGoi">Chọn Gói</string>
    <string name="regis_pay">Đăng Ký Premium</string>
</resources>