<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".botnav_menu.premiumhelper.GoiMiniActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blacknhat"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back"
            android:background="@color/blacknhat"
            android:scaleType="fitCenter"
            android:src="@drawable/close" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/usepre"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@color/black"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image_spotify"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/spotify"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/text_spotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textColor="@color/white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="120dp"
            android:text="@string/YourPick"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="130dp"
            android:text="@string/Change"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="166dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/lomgreen">

        <!-- Nửa dưới với màu trắng -->
        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@drawable/lomgray" />

        <!-- Gạch ngang ở giữa -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/pre_mini"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/ghi_chu_goi_mini"
            android:textSize="13sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/ghi_chu_goi_mini_1"
            android:textSize="13sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="115dp"
            android:text="@string/Text2Goi1"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>
    </FrameLayout>

    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="370dp"
        android:text="@string/tra_truoc"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="italic"/>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="426dp"
        android:background="@drawable/lomgray">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/black" />
        <TextView
            android:id="@+id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/one_week"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/text9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/gia_1_tuan"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/text10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="85dp"
            android:text="@string/one_day"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/text11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="110dp"
            android:text="@string/gia_1_ngay"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </FrameLayout>

    <Button
        android:id="@+id/payMini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/pay"
        android:background="@drawable/lomgreen"
        android:textColor="@android:color/white"/>

</FrameLayout>