<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:fillViewport="true"
        tools:context=".botnav_menu.premiumhelper.GoiPreIndiActivity">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/blacknhat"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/back"
                android:background="@color/blacknhat"
                android:scaleType="fitCenter"
                android:src="@drawable/close" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/usepre"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:background="@color/black"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_spotify"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/iconapp"
                android:layout_marginStart="5dp"/>
            <TextView
                android:id="@+id/text_spotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="12dp"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="120dp"
                android:text="@string/YourPick"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="130dp"
                android:text="@string/Change"
                android:textSize="15sp"
                android:textColor="@color/black" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="166dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/lompink">

            <!-- Nửa dưới với màu trắng -->
            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:background="@drawable/lomgray" />

            <!-- Gạch ngang ở giữa -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/PreInd"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/oneacc"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="105dp"
                android:text="@string/note_preind"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="italic"/>
        </FrameLayout>

        <TextView
            android:id="@+id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="350dp"
            android:text="@string/register"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="390dp"
            android:text="@string/note2"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="426dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/lomgray">
            <FrameLayout
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/lomppp"/>

            <TextView
                android:id="@+id/text13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="12dp"
                android:text="@string/twomonth"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:text="@string/note3"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/text77"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/regisnote"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </FrameLayout>

        <TextView
            android:id="@+id/text15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="580dp"
            android:text="@string/sellone"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="625dp"
            android:text="@string/note4"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="670dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/lomgray">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/black" />
            <TextView
                android:id="@+id/text17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/oneyear"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="43dp"
                android:text="@string/goi1nam"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/text19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="90dp"
                android:text="@string/sixmon"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="120dp"
                android:text="@string/goi6thang"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="850dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/lomgray">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/black" />
            <TextView
                android:id="@+id/text20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/threemon"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/goi3thang"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/text22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="95dp"
                android:text="@string/onemon"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="130dp"
                android:text="@string/goi1thang"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </FrameLayout>

        <Button
            android:id="@+id/payIndi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1050dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:text="@string/pay"
            android:background="@drawable/lomgreen"
            android:textColor="@android:color/white"/>

    </FrameLayout>

</ScrollView>