<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blacknhat"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back"
            android:background="@color/blacknhat"
            android:scaleType="fitCenter"
            android:src="@drawable/close" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/usepre"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@color/black"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image_spotify"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/spotify"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/text_spotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="11dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textColor="@color/white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/lompurple">
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/VettifySinhvien"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/note5"
            android:textSize="17sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="115dp"
            android:text="@string/npte6"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>
    </FrameLayout>

    <Button
        android:id="@+id/Next"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/Next"
        android:layout_marginTop="320dp"
        android:background="@drawable/lomwhite"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"   />

</FrameLayout>