<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_bg"
    android:gravity="bottom|center|top"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginVertical="50dp"
            android:src="@drawable/images" />

        <EditText
            android:id="@+id/Login_EmailOrUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/corner_rounded_gray"
            android:ems="10"
            android:hint="@string/username_or_email"
            android:inputType="text"
            android:padding="16dp" />

        <EditText
            android:id="@+id/Login_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/corner_rounded_gray"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:password="true" />

        <Button
            android:id="@+id/Login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:backgroundTint="@color/app_main_bg_op"
            android:padding="12dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/Login_btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textColor="@color/app_main_bg_op"
            android:textSize="16sp" />

        <Button
            android:id="@+id/Login_btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/corner_rounded_blue"
            android:text="@string/register"
            android:textColor="@color/app_main_bg_op"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>